fixed width on mobile

--- a/style.css
+++ b/style.css
@@ -111,6 +111,8 @@ justify-content: center;
 
 align-items: center;
 
+width: 100%;
+
 }
 
 form{
